fixed font on mobile

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 @font-face {
   font-family: Syne;
-  src: url("font/Syne[wght].ttf");
+  src: url("font/Syne.ttf");
 }
 
 :root {
@@ -136,5 +136,11 @@ img {
     max-width: 550px;
     margin: 0 5% 0 5%;
     font-size: 25px;
+  }
+
+  a,
+  a:visited,
+  a:active {
+    font-size: 22px;
   }
 }
